--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,4 +19,19 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+.main-content {
+  width: 50%;
+  margin: 0 auto;
+  padding: 4em;
+  background-color: aliceblue
+}
+
+.employeeForm .form-group {
+  margin-bottom: 10px;
+}
+
+.employeeForm .form-group input {
+  display: block;
 }
